bk_ida/gccida/c2/loop_iv_add_mult_sink
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/loop_iv_add_mult_sink/src/loop.c:8197:45: error: use of undeclared identifier 'machine_mode'
v14 = expand_mult_add( v9, reg, v12, v13, ( machine_mode)*( ( unsigned __int8 *)reg + 2), 1); 
                                            ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/loop_iv_add_mult_sink/src/obj/loop.o] Error 1
